# altimate

./: README.md
server/: pyproject.toml
server/server/: __init__.py
web/: package.json
web/src/pages/: _app.tsx  index.tsx  tables.tsx
web/src/pages/schema/: [id].tsx
